--- a/hu_wuhu_71_rn.adoc
+++ b/hu_wuhu_71_rn.adoc
@@ -34,9 +34,9 @@ NetApp qualifies additional components between releases of the Host Utilities so
 
 == Features 
 
-* Windows Unified Host Utilities 7.1 includes support for E-Series storage systems, support for ONTAP 9 and later versions, and enhanced iSCSI timeouts for faster failover.
-
 * Windows Unified Host Utilities 7.2 includes support for NVMe/FC driver parameter settings and bug fixes for new vendor cards.
+
+* Windows Unified Host Utilities 7.1 includes support for E-Series storage systems, support for ONTAP 9 and later versions, and enhanced iSCSI timeouts for faster failover.
 
 == Important cautions
 
@@ -69,7 +69,7 @@ link:https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online^] 
 
 
 == About SAN Host Configuration documentation
-Documentation for SAN Host Utilities is included in the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN Host Configuration documentation]. ONTAP SAN HOST configuration documentation is cumulative, covering all current SAN HOST releases. Any functional differences across releases are noted in context.
+Documentation for SAN Host Utilities is included in the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN Host Configuration documentation]. ONTAP SAN host configuration documentation is cumulative, covering all current SAN HOST releases. Any functional differences across releases are noted in context.
 
 == Where to find product documentation and other information
 You can access documentation for all NetApp products and find other product information resources, such as technical reports and white papers on the Product Documentation page of the NetApp corporate site.
