--- a/hu_wuhu_72.adoc
+++ b/hu_wuhu_72.adoc
@@ -67,7 +67,7 @@ Install and configure one or more supported FC host bus adapters (HBAs) for FC c
 The Windows Host Utilities installer sets the required FC HBA settings.
 
 [CAUTION]
-Do not change HBA settings manually.
+Do not change the HBA settings manually.
 
 .Steps
 
@@ -107,7 +107,7 @@ To install the host utilities software package interactively, you must run the h
 . Reboot the Windows host when prompted.
 --
 
-.Install the Host Utilities from a command line
+.Install the host utilities from a command line
 --
 
 You can perform a quiet (unattended) installation of the host utilities by entering the appropriate commands at the Windows command prompt.
@@ -133,13 +133,13 @@ To see the standard Microsoft Installer (MSI) options for logging and other func
 
 == Upgrade the host utilities
 
-The new host utilities installation package must be in a path that is accessible by the Windows host. Follow the instructions for installing the host utilities interactively to obtain the installation package.
+The new host utilities installation package must be in a path that is accessible by the Windows host. Follow the instructions for installing the host utilities interactively in order to upgrade the installation package.
 
 [role="tabbed-block"]
 ====
 .Upgrade the host utilities interactively
 --
-To install the host utilities software package interactively, you must run the host utilities installation program and follow the prompts.
+To upgrade the host utilities software package interactively, you must run the host utilities installation program and follow the prompts.
 
 .Steps
 
@@ -153,9 +153,9 @@ To install the host utilities software package interactively, you must run the h
 
 .Upgrade the host utilities from a command line
 --
-You can perform a quiet (unattended) installation of the new host utilities by entering the appropriate commands at the Windows command prompt.
+You can perform a quiet (unattended) upgrade of the new host utilities by entering the appropriate commands at the Windows command prompt.
 
-The new host utilities installation package must be in a path that is accessible by the Windows host. Follow the instructions for installing the host utilities interactively to obtain the installation package.
+The new host utilities installation package must be in a path that is accessible by the Windows host. Follow the instructions for installing the host utilities interactively to upgrade the installation package.
 
 .Steps
 
@@ -176,7 +176,7 @@ The system automatically reboots when the installation is complete.
 
 == Repair and remove Windows Host Utilities
 
-You can use the host utilities installation program *Repair* option to update the HBA and Windows registry settings. You can remove the host utilities entirely, either interactively or from the Windows command line.
+You can use the *Repair* option of the host utilities installation program to update the HBA and Windows registry settings. You can remove the host utilities entirely, either interactively or from the Windows command line.
 
 [role="tabbed-block"]
 ====
@@ -204,7 +204,7 @@ The *Repair* option updates the Windows registry and FC HBAs with the required s
 +
 `msiexec /f installer.msi [/quiet]`
 
-* * `/f` repairs the installation.
+* `/f` repairs the installation.
 * `installer.msi` is the name of the Windows Host Utilities installation program on your system.
 * `/quiet` suppresses all feedback and reboots the system automatically without prompting when the command completes.
 --
